# jobber

./: .gitignore  Cargo.toml  LICENSE  README.md  database.json  jobber.1  jobber.rb
.github/workflows/: rust.yml
src/: args.rs  change.rs  check.rs  command.rs  configuration.rs  context.rs  date_time.rs  duration.rs  error.rs  export.rs  format.rs  job.rs  job_list.rs  jobs.rs  lib.rs  list.rs  main.rs  operation.rs  output.rs  parameters.rs  partial_date_time.rs  positions.rs  range.rs  reports.rs  run.rs  tag_list.rs  tag_set.rs  tags.rs
src/tests/: back_to_work.rs  commands.rs  edit.rs  mod.rs  partial_date_time.rs  simple.rs  test_back_to_work.rs  test_commands.rs
