[package]
name = "jobber"
version = "0.3.0"
edition = "2021"
description = "Command line tool for tracking work time"
license = "MIT"
authors = ["pat@thats-software.com"]
repository = "https://github.com/fightling/jobber.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
days-in-month = "2.0.0"
itertools = "0.10.5"
regex = "1.7"
serde = { version="1.0.152", features = ["derive","std"] }
serde_json = "1.0.91"
termion = "2.0.1"
thiserror = "1.0.38"
