[package]
name = "jobber"
version = "0.10.1"
edition = "2021"
description = "Command line tool for tracking work time"
license = "MIT"
authors = ["Patrick Hoffmann (pat@thats-software.com)"]
repository = "https://github.com/fightling/jobber.git"
keywords = ["work","time","accounting","shell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="^0.4.20", features = ["serde"] }
clap = { version = "4.1", features = ["derive","cargo"] }
confy = "0.5.1"
days-in-month = "2.0.0"
directories = "4.0.1"
itertools = "0.10.5"
regex = "1.7"
separator = "0.4.1"
serde = { version="1.0.152", features = ["derive","std"] }
serde_json = "1.0.91"
strum = "0.24.1"
strum_macros = "0.24.3"
termion = "2.0.1"
thiserror = "1.0.38"

[lib]
name="jobberdb"

[[bin]]
name="jobber"
